マイグレーション

--- a/DataBase/マイグレーション3.md
+++ b/DataBase/マイグレーション3.md
@@ -101,3 +101,13 @@
 
 大きく紹介
 想定される運用方法を定時
+
+## なぜDbUpか？
+
+>DbUpを使った方が、DB内のトランザクションログが非常に軽く、Entity Frameworkではできない効率的な方法で、自分好みのオブジェクトを作成できるので、楽です。  
+>DBにオブジェクトを作ることしかできないソースコードを使うより、Native SQLを使ってDatabaseの移行をスムーズかつ簡単に行う方がいい。  
+[[Docs] Difference to EF migrations](https://github.com/DbUp/DbUp/issues/590)  
+
+<!--  -->
+>個人的には、データベースの移行を実行したいという理由だけでテクノロジを強制されるのは好きではありません。
+[Database Migrations Using DbUp in an ASP.NET Core Web API Application](https://medium.com/cheranga/database-migrations-using-dbup-in-an-asp-net-core-web-api-application-c24ccfe0cb43)
