マイグレーション

--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -562,6 +562,13 @@ Visual Studio のソリューションは、"解決策" ではありません。
 プロジェクトをまとめる単位。  
 製品としてのまとまりって認識でよさそうだな。  
 
+## クラスライブラリの発行
+
+何も考えずに発行したら`.nupkg`が生成された。  
+名前からしてNuGetのパッケージだと思われる。  
+
+[C#でクラスライブラリを開発する時に必ずやった方が便利な設定](https://qiita.com/kojimadev/items/9d41e57da628dd74246d)  
+
 ---
 
 ## blazor
@@ -571,6 +578,15 @@ Visual Studio のソリューションは、"解決策" ではありません。
 ---
 
 [実践WPF業務アプリケーションのアーキテクチャ【概要編】 ～ マイクロソフト公式サンプルデータベースAdventureWorksを題材に](https://codezine.jp/article/detail/10727?p=7)  
+
+[UnityにおけるC#のGC Allocation（ヒープメモリ確保）パターンの紹介](https://creator.game.cyberagent.co.jp/?p=8645)  
+
+https://zenn.dev/kageko/articles/57ac42c2cee4d9c3742d
+
+Add-Migration InitialCreate –IgnoreChanges
+
+Trusted_Connection=Trueは、Windows 認証を指定します。つまり、Windows 資格情報を使用して SQL Server に接続します。ライブ サーバーでは、SQL Server のユーザー名とパスワードを持つSQL Server 認証を使用します。
+<https://www.yogihosting.com/database-first-approach-entity-framework-core/>  
 
 ---
 
