--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -577,6 +577,39 @@ Visual Studio のソリューションは、"解決策" ではありません。
 
 ---
 
+## ローカルのGit
+
+Gitって別にGithubじゃないといけないってわけじゃないんだよな。  
+
+考えてみれば、ソースコードってどこかのコンピューターに保存されているわけで、そのコンピューターにそういう仕組みがインストールされているだけなんだよな。  
+
+その仕組みをローカルにインストールして、ローカルのその仕組みに向き先を向ければ、Githubと同じことができるわけだよな。
+
+[[VS Code 2022年版]GitHub いらず。ローカルだけで Git を使う](https://www.create-forever.games/vs-code-2022-githubless/)
+
+---
+
+## C#のコンソールアプリのコマンドライン引数
+
+文字列のまとまりはダブルコーテーション。  
+スプリットはスペース。  
+
+``` C#
+Console.WriteLine("Hello, World!");
+foreach (var arg in args)
+    Console.WriteLine(arg);
+```
+
+``` txt
+TestConsole "tetst  aaa" "aaa wwww"
+
+Hello, World!
+tetst  aaa
+aaa wwww
+```
+
+---
+
 ## コラム
 
 >モダンな技術を使っていない＝ダメな企業・組織なのか？  
@@ -713,3 +746,6 @@ curlってwindowsにも入ってるのな。
 [実践WPF業務アプリケーションのアーキテクチャ【概要編】 ～ マイクロソフト公式サンプルデータベースAdventureWorksを題材に](https://codezine.jp/article/detail/10727?p=7)  
 
 [UnityにおけるC#のGC Allocation（ヒープメモリ確保）パターンの紹介](https://creator.game.cyberagent.co.jp/?p=8645)  
+
+[Gitリモートリポジトリの作り方](https://qiita.com/onigra/items/326ba157d5552f0076be)
+
