・アルゴリズム、分離 ・整理 ・RepositoryPattern

--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -623,144 +623,13 @@ er diagram github
 tblsとGitHub Actionsを使ってDBマイグレーションを含むPRには自動更新したER図を追加する
 https://devblog.thebase.in/entry/auto_generated_er_graph_by_tbls_and_github_actions
 
----
+``` txt
+OPERATION | SQL    | HTTP/REST
+----------+--------+-----------
+CREATE    | INSERT | POST
+READ      | SELECT | GET
+UPDATE    | UPDATE | PUT
+DELETE    | DELETE | DELETE
+```
 
-## コラム
-
->モダンな技術を使っていない＝ダメな企業・組織なのか？  
-答えは「No」です。  
-「その時、ある情報・リソースで、適切な技術を選んで使う事」が一番の正解だと、私は思います。  
-_  
-確かに、転職市場では「モダンな技術を使用していれば、書類選考は通りやすい」かもしれません。  
-ですが、それよりもっと大切なのは 「所持している技術をきちんと使えるか？」「どのくらいの経験があるか」「人柄」などのソフトスキルだと思います。  
-ですので「モダンな技術を使用していないから、転職ができない」ということはありません。  
-寧ろ、企業側は「所持している技術をどこまで使えるか」だったり「チーム力」を重視していると思います。（自分自身が「この技術を使いたい！」という理由で転職活動している場合は、別ですが）  
-[「モダンな技術を使用する＝正解」とは限らない](https://zenn.dev/kageko/articles/57ac42c2cee4d9c3742d)  
-
-<!--  -->
->自分は「強いエンジニアさえ集めれば開発は上手くいく」と思ったけど、全然そんなことないと最近感じる。
-いるに越したことないけど、開発体制や組織体制が良くないと開発は上手くいかない。
-もうなんかスポーツみたいだな。
-ワールドクラスのFWを11人集めても勝てない的な。
-<https://twitter.com/pospome/status/1549384413586329605>  
-
-<!--  -->
->職場で我慢して我慢して徐々にフラストレーションが溜まって、結局、最後に爆発して怒る人がいるけど、（俺もやったことあるけど、）あれ、やらない方がいいよね。傍から見ると、唐突にキレられてるようにしか見えないし、我慢する前に色々できたんじゃないかとも思うし。お互いあんまり良いことない。
-<https://twitter.com/MUGI1208/status/1549875407842725888>  
-
-<!--  -->
->エンジニア界隈こんな30代多い
-「仕事？まぁ満足してます。でもこれ以上責任は増えなくていっス。
-会社？まぁ不満あるけど転職するほどでもないっス。
-趣味？特にないっス。
-休みの日？ゲームかアニメか動画観てますね。
-彼女？ずっといません。
-結婚？したくない訳ではないけどもう自分には無理っスよ。」
-<https://twitter.com/TETRA_IT/status/1548605577936666624>  
-
-<!--  -->
->品質落ちる→契約厳しくなる→効率落ちる→技術力あがらない  
-品質が悪くなると「設計書」をきちんと「テストのエビデンス」「進捗管理」を徹底→効率落ちる  
-品質が悪いまま効率が落ちる→朝9時から夜11時まで仕事、土曜日も仕事→勉強の時間はない。  
-勉強しないと技術力上がらない。→技術力上がらないと品質上がらない。→品質上がらないと最初に戻る。  
-[勉強会に参加しないと不幸になる話](https://nowokay.hatenablog.com/entry/20131117/1384684046)  
-
-<!--  -->
->有能なプログラマ「この実装をするなら、この辺とこの辺を考慮しないと・・・。書いてみたけど、この辺も考慮が必要だった。あ、これもだ。」  
-無能なプログラマ「この実装をするのね。書いてみたよ、完了。」  
-<https://twitter.com/shuji_w6e/status/1548104739157524484>  
-
-<!--  -->
->あんまり勉強をせず、高卒で就職した知人に「銃とか爆弾って個人で作れるもんなの？」と聞かれたので「銃とか爆弾に限らず、およそ大抵のものは『作ろう！』という気持ちさえあれば、個人で作れる。工学部を出てるか、専門知識があるか、といった要素はあまり関係ない。作る気持ち次第だ」と答えた  
-<https://twitter.com/kaitou_ryaku/status/1547497690358943745>  
-
-<!--  -->
-学問をやる最大のメリットは、「世界は自分程度の頭では到底理解しきれないほど複雑怪奇なもので」「それで一向に構わない」ということを身をもって知ることだと思う。この体験がない人間は自分が無知で無力であることに耐えられないので、簡単に正解を与えてくれるカルトや陰謀論にあっさり騙される  
-<https://twitter.com/saegusa01/status/1547353586295746560>  
-
-<!--  -->
->宗教は初手が「信じる」だけど、科学は初手が「疑う」なので、もうこの時点で勝敗はついている。  
-一方、技術はいいぞ、初手が「祈る」だからな。  
-<https://twitter.com/ito_yusaku/status/1547114321846890496>
-
-<!--  -->
-1000列のテーブルがあったときにcount(列１)とcount(列1000)で20倍違うよという話。まじでー  
-<https://twitter.com/noborus/status/1546983997322203136>  
-
-<!--  -->
->手を拘束すると、意味を処理する脳活動と言語化の速度が低下する。  
-手が拘束されると、左脳の頭頂間溝と下頭頂小葉の活動が弱まり、言葉の意味処理が阻害されたのです。  
-このことから、何かを説明するときについつい体や手が動いてしまうのはしょうがないことだと分かります。  
-むしろ、身振りや手振りがあるときこそ、その人の脳は盛んに活動していると言えるでしょう。  
-人間の脳は、身体の動きを含めて言葉の意味を記憶している可能性が高いのです。  
-[IT業界人はなぜインタビューでろくろを回すのか？　手を拘束すると言語化速度が低下することが判明！](https://nazology.net/archives/113627)  
-
-<!--  -->
->自分自身の更なる成長が見えている人は、今持ってる技術を人に教えることに抵抗がないし、
-自分に限界を感じてる人は、今持ってる技術が自分の拠り所になってるから、簡単に人には教えられないし、教えてと言ってくる人に苛立ちを覚えるのか、、、、。
-<https://twitter.com/onotchi_/status/1536259179857317888?s=20&t=gktl8H0m1Fh4qITcGVwTQg>
->
->自分は苦労して手に入れた。それを簡単に人に渡してしまったら、自分の分が目減りしてしまうし、他の人は自分よりも簡単に先へ行ってしまう。そんなバカを見るのはいやだ……そういう気持ちが、奥深くにあるという意味です。あなたがそうだと言ってるわけじゃありませんよ。私の話です。
-<https://twitter.com/hyuki/status/1536257574164606977>
-
-[金融の基幹システムを1年半かけて.NET 6に移行した話](https://zenn.dev/nuits_jp/articles/2022-08-26-migration-to-net6)
-[特別な理由なしにgit-flowを新規採用するべきではない](https://qiita.com/ktateish/items/76ca0130aec3be05376c)  
-
-[３年間ソシャゲ開発に携わって、プログラムを書く上で大切だなと思ったこと](https://qiita.com/KyoheiOkawa/items/223368639b9a67c289d9#%E3%82%B3%E3%83%BC%E3%83%AB%E3%83%90%E3%83%83%E3%82%AF%E3%81%99%E3%82%8B%E3%81%A8%E3%81%8D%E3%81%AF%E6%B0%97%E3%82%92%E3%81%A4%E3%81%91%E3%82%8B)  
-
-## Turing.comからのオファー
-
-転職活動でgithubを公開したタイミングでこのメールが来た。  
-上位1%のエンジニアみたいな文言があって、一体何を見てそんなことを言っているのかと思ったが、面白かったのでちょっと調べたら同じような通知を受けた人がいた。  
-まぁ、それだけの話何ですけどね。
-
-[Turing.comからのオファー](https://zenn.dev/tantan_tanuki/articles/cd3ffac8d80292)  
-
----
-
-## 雑記
-
-[新人「先輩、参照の値渡しについてちゃんと理解してますか？😊」](https://qiita.com/yoshi_10_11/items/1b70ccb859891b57cb5a)  
-
-[【Laravel】確認画面付きのお問い合わせフォームを作成する【メール送信対応】](https://into-the-program.com/laravel-create-contact-form/)
-[【 Laravel 】CRUD『 表示・登録・更新・削除 』機能をCODEを書かず自動作成（Beta版機能）](https://qiita.com/daisu_yamazaki/items/3755467b39ef158b81a3)
-[.NET 6とVSCodeでデスクトップアプリ（ランチャー）](https://qiita.com/Kosen-amai/items/61e6b03b8e0fccc35ee5)
-
-[PHP（サーバー）と C#（クライアント）で圧縮した文字列のやりとりをする](https://www.create-forever.games/php-csharp-gzip-encode-decode/)  
-[ASP.NET Core のミドルウェア](https://docs.microsoft.com/ja-jp/aspnet/core/fundamentals/middleware/?view=aspnetcore-6.0)  
-
-[イベントログの確認と保存](https://news.mynavi.jp/techplus/article/techp923/)  
-
-[いま動いてるプロセスのユーザを知る方法ってあるでしょうか。](https://teratail.com/questions/247990)
-
-[NET Frameworkアプリケーションを64bit OS上で32bitモードで動かす方法(その2)](http://niyodiary.cocolog-nifty.com/blog/2009/05/net-framework-1.html)  
-
-[【WPF】フォーカス遷移について知っておきたい３つのキーワード](https://qiita.com/furugen/items/40dae26ef6684dac7fc7)  
-[修飾語](https://sho.benesse.co.jp/qat/j/23.html)  
-
-[変数の渡し方 ref out in](https://qiita.com/muniel/items/02de40a7d806a39b91c1)  
-[C#における値と参照](https://qiita.com/Tokeiya/items/365b3c5b613868f4c928)  
-
-[ストップforeach！LINQで集合/結合する](https://qiita.com/i-tanaka730/items/3e6b560e80f1395ae8ea)  
-
-[RESTとGraphQLについて](https://www.utakata.work/entry/2019/12/02/000000)
-[Reference Source .NET Framework 4.8](https://referencesource.microsoft.com/#System.Web,namespaces)  
-
-[C# の Web アプリで async/await を使わないとどれくらい性能劣化するか見てみよう(.NET Framework編)](https://zenn.dev/okazuki/articles/async-sync-webapi-dotnetfw)  
-
-モジュールはクラスの代替になるのか？  
-[第7回 VBのモジュールはオブジェクト指向に不要？](https://atmarkit.itmedia.co.jp/fdotnet/vbcheer/vbcheer07/vbcheer07.html)  
-
-[有名企業のエンジニア向け研修資料まとめ](https://qiita.com/KNR109/items/f3268b311e11d5b821c0)  
-
-curlってwindowsにも入ってるのな。
-[curl コマンド 使い方メモ](https://qiita.com/yasuhiroki/items/a569d3371a66e365316f)  
-
-[ncコマンドの使い方](https://hana-shin.hatenablog.com/entry/2021/12/18/203658)  
-
-[実践WPF業務アプリケーションのアーキテクチャ【概要編】 ～ マイクロソフト公式サンプルデータベースAdventureWorksを題材に](https://codezine.jp/article/detail/10727?p=7)  
-
-[UnityにおけるC#のGC Allocation（ヒープメモリ確保）パターンの紹介](https://creator.game.cyberagent.co.jp/?p=8645)  
-
-[Gitリモートリポジトリの作り方](https://qiita.com/onigra/items/326ba157d5552f0076be)
-
+[Repository Pattern](https://www.youtube.com/watch?v=x6C20zhZHw8)  
