細かいこと追加

--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -633,3 +633,18 @@ DELETE    | DELETE | DELETE
 ```
 
 [Repository Pattern](https://www.youtube.com/watch?v=x6C20zhZHw8)  
+
+---
+
+``` cs
+var str = "{0}『{1}』のデータは存在しません。";
+System.Console.WriteLine(string.Format(str,"1","2"));
+// 1『2』のデータは存在しません。
+
+str = "aaaaa";
+System.Console.WriteLine(string.Format(str,"1","2"));
+// aaaa
+```
+
+[ウォーターフォールは、採用すべきでない架空の開発戦略だったという説。](https://twitter.com/shudo/status/1590653014423273476)  
+[ウォーターフォールを世に広めたとされる米軍がアジャイルに移行中という話](https://qiita.com/YankeeDeltaBravo225/items/9f08c0eccd48f00b9f9e)  
