参考追加 リポジトリパターン追記

--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -648,3 +648,17 @@ System.Console.WriteLine(string.Format(str,"1","2"));
 
 [ウォーターフォールは、採用すべきでない架空の開発戦略だったという説。](https://twitter.com/shudo/status/1590653014423273476)  
 [ウォーターフォールを世に広めたとされる米軍がアジャイルに移行中という話](https://qiita.com/YankeeDeltaBravo225/items/9f08c0eccd48f00b9f9e)  
+
+---
+
+## クラス図
+
+[IT専科](https://www.itsenka.com/contents/development/uml/class.html)  
+
+継承(inheritance) → 汎化(generalization)  
+実装(implemente) → 実現(realization)  
+
+---
+
+>集約をまたがった JOIN について考えていくと、CQRS に到達します。  
+[「集約」でデータアクセスの 3 つの課題に立ち向かう ~ 大量の Repository・整合性のないオブジェクトのロード・N + 1 問題 ~](https://qiita.com/os1ma/items/28f5d03d3b92e6a1e1d8)  
