リポジトリパターン実装＆整理

--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -662,3 +662,7 @@ System.Console.WriteLine(string.Format(str,"1","2"));
 
 >集約をまたがった JOIN について考えていくと、CQRS に到達します。  
 [「集約」でデータアクセスの 3 つの課題に立ち向かう ~ 大量の Repository・整合性のないオブジェクトのロード・N + 1 問題 ~](https://qiita.com/os1ma/items/28f5d03d3b92e6a1e1d8)  
+
+## テストコード
+
+[意識が高くないVisualStudioを使用した単体テストの自動化](https://qiita.com/mima_ita/items/05ce44c3eb1fd6e9dd46)  
