・begin tran, rollback tranの順番 ・arm ・C# 再スローのベストプラクティス

--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -666,3 +666,13 @@ System.Console.WriteLine(string.Format(str,"1","2"));
 ## テストコード
 
 [意識が高くないVisualStudioを使用した単体テストの自動化](https://qiita.com/mima_ita/items/05ce44c3eb1fd6e9dd46)  
+
+---
+
+## ARM
+
+>ARM系プロセッサはスマートフォンなどのモバイル端末、機器の制御装置など組み込みシステムで人気が高いが、ARM64は高い性能が求められる高性能スマートフォンやサーバでよく用いられる。  
+汎用コンピュータ製品での普及も見込まれ、Windows 10以降がARM64に新たに対応したり、MacのCPUが米インテル（Intel）系製品からARM64ベースの自社開発チップ（M1など）に変更されるなどの動きが広がっている。  
+[e-words]  
+
+[](https://mo-no-log.com/arm/)  
