・dapper整理 ・参考追加

--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -676,3 +676,16 @@ System.Console.WriteLine(string.Format(str,"1","2"));
 [e-words]  
 
 [](https://mo-no-log.com/arm/)  
+
+---
+
+## DDD
+
+[ボトムアップドメイン駆動設計 後編](https://nrslib.com/bottomup-ddd-2/#outline__5_1)  
+[DDD の練習してみた（C# 編）](https://qiita.com/TakashiOnawa/items/19258d9a006240a48ec7)  
+
+---
+
+## 詳細設計書
+
+[詳細設計書って何をどう書くの？](https://qiita.com/pickles1413/items/38d650fc29bb6a6c070d)
