--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -594,31 +594,16 @@ Visual Studio のソリューションは、"解決策" ではありません。
 
 [.NET6 Blazor selectタグ multiple @bind](https://sumomo.ohwaki.jp/wordpress/?p=406)  
 
-## efcore
-
-DIしない場合、OnConfiguringから直接、接続文字列を与えないと起動できないし、bundleも生成できない。
-
-``` cs
-    class AppDbContext : DbContext
-    {
-        public DbSet<Item> Items { get; set; }
-        public DbSet<Player> Players { get; set; }
-
-        public const string ConnectionString = "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=EFCoreDb;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False";
-        protected override void OnConfiguring(DbContextOptionsBuilder options)
-        {
-        options.UseSqlServer(ConnectionString);
-        }
-    }
-```
+---
 
 ## appsettings.json 有無 確認
 
 appsettings.json existance check
 https://stackoverflow.com/questions/44641488/how-to-check-if-configuration-section-exists-in-net-core
 
+---
 
-er diagram github
+## er diagram github
 
 tblsとGitHub Actionsを使ってDBマイグレーションを含むPRには自動更新したER図を追加する
 https://devblog.thebase.in/entry/auto_generated_er_graph_by_tbls_and_github_actions
@@ -675,7 +660,10 @@ System.Console.WriteLine(string.Format(str,"1","2"));
 汎用コンピュータ製品での普及も見込まれ、Windows 10以降がARM64に新たに対応したり、MacのCPUが米インテル（Intel）系製品からARM64ベースの自社開発チップ（M1など）に変更されるなどの動きが広がっている。  
 [e-words]  
 
-[](https://mo-no-log.com/arm/)  
+<!--  -->
+>「ARM」のCPUは、パソコンを除けばスマホは勿論、タブレットやモバイル系のゲーム機、カーナビやルーターに至るまで、様々デバイスに搭載されています。  
+また、小型で省電力性能に優れる、RISC型のCPUのアーキテクチャーのため、スマホやタブレットなどのモバイル機はもちろん、カーナビやSTB、白物家電などの組み込みではシェアは圧倒的。  
+[「ARM」のCPUとは？特徴と種類を徹底解説!!](https://mo-no-log.com/arm/)  
 
 ---
 
@@ -689,3 +677,17 @@ System.Console.WriteLine(string.Format(str,"1","2"));
 ## 詳細設計書
 
 [詳細設計書って何をどう書くの？](https://qiita.com/pickles1413/items/38d650fc29bb6a6c070d)
+
+---
+
+## AOP
+
+Javaには`@Transaction`アノテーションなるものが存在する。  
+そのメソッドがトランザクションを実行することを明示することを説明し、メソッドの開始と同時にトランザクションを開始して、終了と同時にコミットを行う。  
+C#でもできなくはないが、メソッド単位は無理な模様。  
+このように、アノテーションによって共通的な処理を行う方式はAOP(アスペクト指向プログラミング)と呼ばれるらしい。  
+流行っていないのでお察しだが、トランザクションに関しては便利だなと思った。  
+
+[](https://qiita.com/yamaokunousausa/items/0e99aef0a0b3adb32d08)  
+
+[.NET で独自の AOP を導入したら不便になってしまった話](https://qiita.com/KoKeCross/items/4b16ff8cdad65e0fea23)  
