・migration ・コンソールアプリ ・dapperまとめ ・その他整理

--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -590,16 +590,108 @@ Visual Studio のソリューションは、"解決策" ではありません。
 
 [Windows git-bash.exeでバッチファイルを実行](https://teratail.com/questions/100039)  
 
-## blazor multi select bind
-
-[.NET6 Blazor selectタグ multiple @bind](https://sumomo.ohwaki.jp/wordpress/?p=406)  
-
 ---
 
 ## appsettings.json 有無 確認
 
 appsettings.json existance check
 https://stackoverflow.com/questions/44641488/how-to-check-if-configuration-section-exists-in-net-core
+
+---
+
+## コンソールアプリでappsettings.jsonを使う
+
+単純そうに見えて、意外とやることが多い。  
+
+NuGetからライブラリをインストールする。  
+
+`Microsoft.Extensions.Configuration`  
+`Microsoft.Extensions.Configuration.Json`  
+
+`dotnet add package Microsoft.Extensions.Configuration --version 6.*`
+`dotnet add package Microsoft.Extensions.Configuration.Json --version 6.*`
+
+``` json
+{
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=<sv_name>;Database=<db_name>;User ID=<user_id>;Password=<passwd>"
+  }
+}
+```
+
+### appsettings.jsonをビルド結果に含める場合
+
+プロジェクトファイルにセクション追加
+
+``` xml : csproj
+  <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+```
+
+デフォルトの場合、`bin/debug`階層のappsettings.jsonファイルを参照しに行く模様。  
+
+``` cs
+using Microsoft.Extensions.Configuration;
+
+var configuration = new ConfigurationBuilder()
+    .AddJsonFile("appsettings.json")
+    .Build();
+
+Console.WriteLine(configuration.GetConnectionString("DefaultConnection"));
+```
+
+### プロジェクトファイルと同じ階層のappsettings.jsonを使用する場合
+
+`Directory.GetCurrentDirectory()`はPCが処理を行っている場所を指し示すので、プロジェクトファイル階層で`dotnet run`を行う限りはプロジェクトファイル階層のappsettings.jsonを参照できる。  
+
+``` cs
+using System.IO;
+using Microsoft.Extensions.Configuration;
+
+var configuration = new ConfigurationBuilder()
+    .SetBasePath(Directory.GetCurrentDirectory())
+    .AddJsonFile("appsettings.json", optional: false, reloadOnChange: true)
+    .Build();
+
+Console.WriteLine(configuration.GetConnectionString("DefaultConnection"));
+```
+
+[.NETのコンソールアプリでappsettings.jsonを使う (.NET6)](https://zenn.dev/higmasu/articles/b3dab3c7bea6db)
+[How to Get Connection String from Appsettings.json? .net Core Console Application](https://yarkul.com/how-to-get-connection-string-from-appsettings-json-net-core-console-application/)  
+
+---
+
+## コンソールアプリから別のexeを引数ありで実行する
+
+``` cs
+using System;
+using System.Diagnostics;
+
+// Processクラスのオブジェクトを作成
+Process process = new Process();
+// コマンドプロンプト
+process.StartInfo.FileName = "cmd.exe";
+// コマンドプロンプトに渡す引数
+process.StartInfo.Arguments = "/c dir";
+// ウィンドウを表示しない
+process.StartInfo.CreateNoWindow = true;
+process.StartInfo.UseShellExecute = false;
+// 標準出力および標準エラー出力を取得可能にする
+process.StartInfo.RedirectStandardOutput = true;
+process.StartInfo.RedirectStandardError = true;
+
+// プロセス起動
+process.Start();
+// 標準出力を取得
+string standardOutput = process.StandardOutput.ReadToEnd();
+// 標準出力を表示
+Console.WriteLine(standardOutput);
+```
+
+[C#でのexeファイルの扱い方とは？exeの起動・exeの実行結果を取り込む・exeの終了を待ち合わせる・exeのパスを取得する方法](https://www.fenet.jp/dotnet/column/language/9700/)
 
 ---
 
@@ -672,6 +764,8 @@ System.Console.WriteLine(string.Format(str,"1","2"));
 [ボトムアップドメイン駆動設計 後編](https://nrslib.com/bottomup-ddd-2/#outline__5_1)  
 [DDD の練習してみた（C# 編）](https://qiita.com/TakashiOnawa/items/19258d9a006240a48ec7)  
 
+[Domain Layer Structure & Skeleton | Clean Architecture & DDD From Scratch Tutorial | Part 13](https://www.youtube.com/watch?v=jnutb5Z4wyg)  
+
 ---
 
 ## 詳細設計書
@@ -688,6 +782,10 @@ C#でもできなくはないが、メソッド単位は無理な模様。
 このように、アノテーションによって共通的な処理を行う方式はAOP(アスペクト指向プログラミング)と呼ばれるらしい。  
 流行っていないのでお察しだが、トランザクションに関しては便利だなと思った。  
 
-[](https://qiita.com/yamaokunousausa/items/0e99aef0a0b3adb32d08)  
+[AOPが不要だと考える理由](https://qiita.com/yamaokunousausa/items/0e99aef0a0b3adb32d08)  
 
 [.NET で独自の AOP を導入したら不便になってしまった話](https://qiita.com/KoKeCross/items/4b16ff8cdad65e0fea23)  
+
+## AOPでTransaction
+
+[C# AOP Transaction Aspect](https://stackoverflow.com/questions/71703376/c-sharp-aop-transaction-aspect)  
