--- a/DataBase/SQLServer/バックアップと復元.md
+++ b/DataBase/SQLServer/バックアップと復元.md
@@ -1,13 +1,11 @@
 # バックアップと復元
 
----
-
-## SQL SERVER のバックアップの仕方
+## バックアップの方法
 
 1. バックアップしたいテーブルを右クリックする。  
-2. [タスク∟バックアップ] を選択する。  
+2. `タスク → バックアップ` を選択する。  
 3. 全般のバックアップ先に[保存先]と[保存名.bak]を設定する。  
-4. オプション ∟ メディア ∟ 上書きのオプションボタンを[既存のすべてのバックアップセットを上書きする]を選択する。  
+4. `オプション → メディア → 上書き`のオプションボタンを`既存のすべてのバックアップセットを上書きする`を選択する。  
 5. OKを押してバックアップを実行する。  
 
 ---
@@ -37,37 +35,3 @@
 - オプション  
   - [既存のデータベースを上書きする] チェック入れる  
   - [ログ末尾のバックアップ] チェック外す(チェックが入っていることがある)  
-
----
-
-## Insert Go文の作り方
-
-1. データベースを右クリック  
-2. タスク→スクリプトの生成  
-3. 次へボタンを押す  
-4. 特定のデータベースオブジェクトの選択  
-5. 対象テーブルを選択して次へ  
-6. クリップボードにコピーか新しいクエリウィンドウに保存  
-7. 詳細設定ボタン  
-   - 全般 : `USE DATABASEのスクリプトを作成` → False  
-   - `サーバーのバーション互換のスクリプト` → SQLServer2008R2にする  
-   - `スクリプトを作成するデータの種類` → データのみに設定  
-8. 次へを押していけば完了  
-
----
-
-## CREATE TABLEのスクリプト出力
-
-CREATE TABLEする時のSQL文を出力するためにはスクリプトを実行する必要あり。  
-
-1. データベースを右クリック  
-2. タスク→スクリプトの生成  
-3. 次へボタンを押す  
-4. 特定のデータベースオブジェクトの選択  
-5. 対象テーブルを選択して次へ  
-6. クリップボードにコピーか新しいクエリウィンドウに保存  
-7. 詳細設定  
-   - `スクリプトを作成するデータの種類` → `スキーマのみ` になっていることを確認  
-8. 次へを押していけば完了  
-
-[【SQL Server】SSMSを使用して、各種定義やレコードをエクスポートする](https://sqlserver.work/2020/06/28/ssms%E3%82%92%E4%BD%BF%E7%94%A8%E3%81%97%E3%81%A6%E3%80%81%E5%90%84%E7%A8%AE%E5%AE%9A%E7%BE%A9%E3%82%84%E3%83%AC%E3%82%B3%E3%83%BC%E3%83%89%E3%82%92%E3%82%A8%E3%82%AF%E3%82%B9%E3%83%9D%E3%83%BC/)  
