・整理 ・マイグレーション

--- a/SystemDesign/設計コラム.md
+++ b/SystemDesign/設計コラム.md
@@ -83,3 +83,6 @@ Adobeは超老舗かつプロ向けの製品が多いため多機能なプロダ
 教条的に何かがいいとか悪いとか、そんなことでグダグダ言わずに各論にしっかり向き合って考えろ。  
 それがソフトウェアエンジニアに与えられた最大の裁量なんだから。  
 <https://twitter.com/sawawww/status/1574693630148694017>  
+
+[ウォーターフォールは、採用すべきでない架空の開発戦略だったという説。](https://twitter.com/shudo/status/1590653014423273476)  
+[ウォーターフォールを世に広めたとされる米軍がアジャイルに移行中という話](https://qiita.com/YankeeDeltaBravo225/items/9f08c0eccd48f00b9f9e)  
