--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -696,21 +696,6 @@ DELETE    | DELETE | DELETE
 
 ---
 
-``` cs
-var str = "{0}『{1}』のデータは存在しません。";
-System.Console.WriteLine(string.Format(str,"1","2"));
-// 1『2』のデータは存在しません。
-
-str = "aaaaa";
-System.Console.WriteLine(string.Format(str,"1","2"));
-// aaaa
-```
-
-[ウォーターフォールは、採用すべきでない架空の開発戦略だったという説。](https://twitter.com/shudo/status/1590653014423273476)  
-[ウォーターフォールを世に広めたとされる米軍がアジャイルに移行中という話](https://qiita.com/YankeeDeltaBravo225/items/9f08c0eccd48f00b9f9e)  
-
----
-
 ## クラス図
 
 [IT専科](https://www.itsenka.com/contents/development/uml/class.html)  
@@ -1016,12 +1001,45 @@ dotnet ef dbcontext scaffold Name=ConnectionStrings:<Alias> Microsoft.EntityFram
 でもこれは、今の職場で学ぶことが何もなくなったり、圧倒的な成果を出すことが出来た時に考えることであって、現職で毎日学ぶことがあって楽しいならまだ早いと思う。  
 [転職・退職する前に考えてほしいこと](https://qiita.com/hiro-hiro/items/5d4f89cd30cf3e87bd61)  
 
->Microsoft.EntityFrameworkCore.Tools(PMCツール)
-マイグレーションを実行するEXEをDBごとに出力する。（EF Core 6.0から）
-すべてのマイグレーションを実行するクエリを発行する
-指定したマイグレーション範囲のクエリを発行する。
-マイグレーションを実行する。
+---
 
-<!--  -->
->dotnet-ef（.NET Core CLIツール）
-Microsoft.EntityFrameworkCore.Toolsと同等のことが可能。
+## ASP.Net Core Web API のSwaggerを VSCodeのCLIから立ち上げる
+
+`WepAPI`を起動する時の話。  
+
+Visual Studioでは`IIS Express`の起動オプションがあって、それで実行した場合、自動的にSwaggerが表示される。  
+同じ感覚でVSCodeからCLIで`dotnet run`するのだが、何も立ち上がらない。  
+表示されるURLに飛んでもエラーの画面が出るだけ。  
+VSCodeからCLIで起動した場合にSwaggerを使うためにはどうすればよいのか調べた。  
+
+結果的に表示されるURLに`/Swagger`でアクセスするだけでよかった。  
+
+`https://localhost:port/swagger/`  
+
+[VSCODE ASP.NET Coreで「Swagger」を導入して利用するまで](https://mebee.info/2021/07/17/post-35547/)  
+
+検索文字列  
+dotnet run --launch-profile "WebAPISample"
+dotnet watch run swagger  
+dotnet swagger cli
+
+---
+
+## ASP.Net Core Web API のデフォルトURLを変更する
+
+`WebAPI`を`dotnet run`で立ち上げたときに表示されるデフォルトのURLの末尾に`/Swagger`って追加して、Ctrl+クリックですぐにSwaggerに飛べるようにできないか調べてみた。  
+
+できなかったが、同じようなことを考えている人たちはいたのでリンクだけまとめる。  
+
+[Set start URL in ASP.NET Core – Quick & Easy ways](https://procodeguide.com/programming/how-to-set-start-url-in-aspnet-core/)  
+[How to set up URL of ASP.NET Core Web Application in Visual Studio 2015](https://stackoverflow.com/questions/38737847/how-to-set-up-url-of-asp-net-core-web-application-in-visual-studio-2015)  
+
+---
+
+``` cs
+    [HttpGet("GetInt/{id}")]
+    public ActionResult<int?> GetInt(int? id)
+    {
+        return Ok(id);
+    }
+```
