・マイグレーション追記 ・WebAPIサンプル追加 ・整理

--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -1007,8 +1007,8 @@ dotnet ef dbcontext scaffold Name=ConnectionStrings:<Alias> Microsoft.EntityFram
 
 `WepAPI`を起動する時の話。  
 
-Visual Studioでは`IIS Express`の起動オプションがあって、それで実行した場合、自動的にSwaggerが表示される。  
-同じ感覚でVSCodeからCLIで`dotnet run`するのだが、何も立ち上がらない。  
+Visual StudioでWebAPIをF5実行するとき、`IIS Express`の起動オプションがあるので、それで実行すると、自動的にSwaggerが表示される。  
+同じ感覚でVSCodeからCLIで`dotnet run`すると、何も立ち上がらない。  
 表示されるURLに飛んでもエラーの画面が出るだけ。  
 VSCodeからCLIで起動した場合にSwaggerを使うためにはどうすればよいのか調べた。  
 
