・整理 ・細かい調査事項諸々 ・マイグレーションに関してまとめ ・コンソールアプリに関して諸々

--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -768,12 +768,6 @@ public string? MiddleName { get; } = null;
 
 ---
 
-## 詳細設計書
-
-[詳細設計書って何をどう書くの？](https://qiita.com/pickles1413/items/38d650fc29bb6a6c070d)
-
----
-
 ## Parallel.For, Parallel.ForEach
 
 デフラグっぽいグラフィカルな表現で並列処理が確認できて面白い。  
@@ -952,7 +946,7 @@ app.Run();
 
 ---
 
-## ASP.NET Core開発におけるアプリシークレットの安全な保存
+## ASP.NET Core開発におけるユーザーシークレットの安全な保存
 
 dotnet-efコマンドでスキャフォールドする時に、`--no-onconfiguring`オプションを入力しない状態で接続先情報を直接入力すると黄色い文字で警告が表示される。  
 
@@ -984,22 +978,6 @@ dotnet ef dbcontext scaffold Name=ConnectionStrings:<Alias> Microsoft.EntityFram
 
 [ASP.NET Core での開発におけるアプリ シークレットの安全な保存](https://learn.microsoft.com/ja-jp/aspnet/core/security/app-secrets?view=aspnetcore-7.0&tabs=windows)  
 [ASP.NET CoreにおけるUserSecretを使用した設定情報の保存](https://shuhelohelo.hatenablog.com/entry/2019/11/13/101328)  
-
----
-
->オブジェクトの生存期間を外部からコントロールする必要があるクラスを『状態を持つクラス』と言い、基本的に DI コンテナへ登録する対象には向いていません。  
->
->とは言っても『状態を持つクラス』を DI したい場合もあるため、状態を持たない Factory クラスをインジェクションして Factory からインスタンスを受け取るようにしています。  
->[ようこそ Dapper 至上主義の DataAccess へ【#5 WPF MVVM L@bo】](https://elf-mission.net/programming/wpf/mvvm-labo/phase05/#DataAccess_Repository)  
-
-[superの呼び出し](https://bliki-ja.github.io/CallSuper/)  
-
-なぜ新しい技術を使っていきたいのか？  
-・市場価値のため  
-・他でやっていける力をつけるため  
-・学ぶことが楽しいから  
-でもこれは、今の職場で学ぶことが何もなくなったり、圧倒的な成果を出すことが出来た時に考えることであって、現職で毎日学ぶことがあって楽しいならまだ早いと思う。  
-[転職・退職する前に考えてほしいこと](https://qiita.com/hiro-hiro/items/5d4f89cd30cf3e87bd61)  
 
 ---
 
@@ -1039,19 +1017,9 @@ dotnet swagger cli
 
 ---
 
-``` cs
-    [HttpGet("GetInt/{id}")]
-    public ActionResult<int?> GetInt(int? id)
-    {
-        return Ok(id);
-    }
-```
-
----
-
 ## ASP.Net Core WebAPI の IISへのデプロイ
 
-.NET Core ホスティング バンドル
+自己完結型での発行でない場合は`.NET Core ホスティング バンドル`のバージョンをプロジェクトの.Netのバージョンと合わせる必要がある。  
 
 [.NET Core の WebAPI（C#）をIISにデプロイする（VisualStudioCode）](https://qiita.com/HyunwookPark/items/92f06f917b3a479438c1)  
 
@@ -1060,9 +1028,260 @@ dotnet swagger cli
 ## ANCM Failed to Find Native Dependencies
 
 .Net5の環境に.Net6のアプリをデプロイした時に発生。  
-文面だけ見れば当たり前か。  
+古いバージョンの環境に最新のバージョンを乗せるのだから当たり前か。  
 
 [HTTP Error 500.31 Failed to load ASP NET Core runtime](https://www.youtube.com/watch?v=4oGwobgBkWU)  
 この動画を参考に`ASP.NET Core 6.0 Runtime`をダウンロードしてインストールしてみたらローカルは解決した。  
 
 [ASP.NET > ASP.NET Core > HTTP エラー 500.19 0x8007000d](https://qiita.com/sugasaki/items/02927c18497c0d2379fa)  
+
+---
+
+## linuxで.Netコンソールアプリを実行する方法
+
+1. コンソールアプリを作成する  
+`dotnet new console`  
+
+2. 自己完結モードで発行  
+`dotnet publish -c Release -r linux-x64 --self-contained true`  
+
+3. Linuxにファイルを移動
+
+4. 権限の変更 & 実行
+`chmod 755 ./console`  
+`./console`  
+
+[Windowsで開発した .Net Coreを、frameworkがインストールされていないLinuxで実行](https://techlive.tokyo/archives/10145)  
+
+---
+
+## WebAPIのSwaggerをデフォルトページとしてIISにデプロイしたい
+
+色々迷走したが、このサイトの通りにやれば問題ない。  
+[Host And Publish .NET Core 6 Web API Application On IIS Server](https://www.c-sharpcorner.com/article/host-and-publish-net-core-6-web-api-application-on-iis-server2/)  
+
+嵌ったポイントとしては新しくWebサイトを追加するのではなく、アプリケーションの追加で頑張ってしまったため、うまく行かなかった。  
+プログラム側でガチャガチャやる必要はなく、完全にIIS側の設定で済む話だった。  
+デフォルトページにきたらリダイレクトも考えたが、そもそもアプリのurlに到達しての話なので、全然関係なかったな。  
+
+他参考サイト  
+[How To Set Default Swagger Welcome Page In Web Api](https://www.adoclib.com/blog/how-to-set-default-swagger-welcome-page-in-web-api.html)  
+[How to redirect root to swagger in Asp.Net Core 2.x?](https://stackoverflow.com/questions/49290683/how-to-redirect-root-to-swagger-in-asp-net-core-2-x)  
+[How to set Swagger as default start page?](https://stackoverflow.com/questions/47457681/how-to-set-swagger-as-default-start-page)  
+[How to use Swagger as Welcome Page of IAppBuilder in WebAPI](https://stackoverflow.com/questions/30028736/how-to-use-swagger-as-welcome-page-of-iappbuilder-in-webapi/50127631#50127631)  
+[How to host Asp.net core web API on IIS](https://www.youtube.com/watch?v=6HiaXCAlRr0)  
+[ASP.NET Core でリダイレクトする (301,302 リダイレクトの実装) (ASP.NET Core プログラミング)](https://www.ipentec.com/document/asp-net-core-implement-301-302-redirect)  
+
+検索文字列  
+
+- webapi iis swagger default  
+- .net core web api redirect swagger  
+- launchsettings.json iissettings applicationurl  
+- set swagger as default page iis  
+- asp.net core redirect to url .net6 program.cs  
+- iis default url  
+- .net core default url  
+
+---
+
+## Swaggerにドキュメントコメントを反映させる
+
+.Net6の場合  
+
+プロジェクト右クリック,プロパティ→ビルド→出力→ドキュメントファイル→APIドキュメントを含むファイルを生成にチェック
+
+``` cs : Program.cs
+services.AddSwaggerGen(c =>
+{
+    // Set the comments path for the Swagger JSON and UI.
+    var xmlFile = $"{Assembly.GetExecutingAssembly().GetName().Name}.xml";
+    var xmlPath = Path.Combine(AppContext.BaseDirectory, xmlFile);
+    c.IncludeXmlComments(xmlPath);
+});
+```
+
+[Swagger in ASP.NET Core: Tips & Tricks](https://blog.georgekosmidis.net/swagger-in-asp-net-core-tips-and-tricks.html)  
+
+---
+
+## exeに全て内包させる
+
+①csprojに`PublishSingleFile`タグを追加
+
+``` xml
+  <PropertyGroup>
+    <OutputType>Exe</OutputType>
+    <TargetFramework>net7.0</TargetFramework>
+    <RootNamespace>Console_Self</RootNamespace>
+    <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
+    <PublishSingleFile>true</PublishSingleFile> ←追加
+  </PropertyGroup>
+```
+
+コマンド  
+
+``` txt
+dotnet publish -o Output -c Release --self-contained=true -r win-x64 -p:PublishSingleFile=true -p:PublishTrimmed=true  
+```
+
+[単体で使えるexeファイルの生成](https://teratail.com/questions/217007)  
+
+---
+
+## 自己完結型で発行しつつ、zipで圧縮するバッチ
+
+``` batch
+@echo off
+rem 自己完結型でwin-x86とlinux-x64向けに発行し、GitHubにアップロードするためにzip圧縮するバッチファイル
+
+dotnet publish （１） -o （２） -c Release --self-contained=true -r linux-x64 -p:PublishSingleFile=true -p:PublishTrimmed=true
+powershell Compress-Archive -Path （２） -DestinationPath （２）.zip -Force
+
+dotnet publish （１） -o （３） -c Release --self-contained=true -r win-x86 -p:PublishSingleFile=true -p:PublishTrimmed=true
+powershell Compress-Archive -Path （３） -DestinationPath （３）.zip -Force
+
+dotnet publish （１） -o （３） -c Release --self-contained=true -r win-x64 -p:PublishSingleFile=true -p:PublishTrimmed=true
+powershell Compress-Archive -Path （３） -DestinationPath （３）.zip -Force
+
+@echo --- Finished ---
+pause > nul
+```
+
+[.Net Coreのコントロールアプリを自己完結型で発行する際に参考にした情報](https://qiita.com/yusuke-sasaki/items/80bb84c4b3534d1481fc)  
+
+---
+
+## フォルダ全体を埋め込みリソースにする方法
+
+特定のフォルダのファイルを全て埋め込みリソースとしたい場合の設定。  
+csprojファイルに以下のタグを設定する。  
+
+``` xml
+  <ItemGroup>
+    <EmbeddedResource Include="対象フォルダ名\*" />
+  </ItemGroup>
+```
+
+ワイルドカードにより、拡張子を指定したり、除外したりすることができるので、必要十分な設定が可能。  
+
+実際はこのような形で埋め込むことになる。  
+
+``` xml
+<Project Sdk="Microsoft.NET.Sdk">
+  <hoge>
+    ~~
+  </hoge>
+
+  <ItemGroup>
+    <EmbeddedResource Include="FugaFolder\*.bmp" />
+  </ItemGroup>
+</Project>
+```
+
+- 参考  
+  - [How can I have an entire folder be an embedded resource in a Visual Studio project?](https://stackoverflow.com/questions/8994258/how-can-i-have-an-entire-folder-be-an-embedded-resource-in-a-visual-studio-proje)  
+
+■**例**
+
+EFCoreのマイグレーションでコンソールアプリで遭遇した事例をそのまま使用する。  
+以下のようなフォルダ構成の時にどのように表示されるか調査した。  
+
+フォルダ構成
+
+``` txt
+Project
+├─Migration
+｜  ├─ConsoleAppSample.Migrations.20221129070349_First.cs
+｜  ├─ConsoleAppSample.Migrations.20221129070349_First.Designer.cs
+｜  ├─ConsoleAppSample.Migrations.20221129070420_Second.cs
+｜  ├─ConsoleAppSample.Migrations.20221129070420_Second.Designer.cs
+｜  └─ConsoleAppSample.Migrations.AppDbContextModelSnapshot.cs
+└─Program.cs
+```
+
+出力コード
+
+``` cs
+    Assembly assembly = Assembly.GetExecutingAssembly();
+    var stream = assembly.GetManifestResourceNames();
+    foreach (var item in stream)
+        Console.WriteLine(item);
+```
+
+■**```*```の場合の出力**
+
+全て出力される。  
+
+``` xml
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\*" />
+  </ItemGroup>
+```
+
+``` txt
+ConsoleAppSample.Migrations.20221129070349_First.cs
+ConsoleAppSample.Migrations.20221129070349_First.Designer.cs
+ConsoleAppSample.Migrations.20221129070420_Second.cs
+ConsoleAppSample.Migrations.20221129070420_Second.Designer.cs
+ConsoleAppSample.Migrations.AppDbContextModelSnapshot.cs
+```
+
+■**ワイルドカードを使用**
+
+条件に該当するファイルが出力される。  
+
+``` xml
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\*.Designer.cs" />
+  </ItemGroup>
+```
+
+``` txt
+ConsoleAppSample.Migrations.20221129070349_First.Designer.cs
+ConsoleAppSample.Migrations.20221129070420_Second.Designer.cs
+```
+
+■**除外条件の設定**
+
+`Remove`プロパティで設定可能な模様。  
+
+``` xml
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\*.cs" />
+    <EmbeddedResource Remove="Migrations\*.Designer.cs" />
+    <EmbeddedResource Remove="Migrations\AppDbContextModelSnapshot.cs" />
+  </ItemGroup>
+```
+
+``` txt
+ConsoleAppSample.Migrations.20221129070349_First.cs
+ConsoleAppSample.Migrations.20221129070420_Second.cs
+```
+
+- 参考  
+  - [How do I exclude files/folders from a .NET Core/Standard project?](https://stackoverflow.com/questions/43173811/how-do-i-exclude-files-folders-from-a-net-core-standard-project)  
+
+---
+
+``` cs
+    [HttpGet("GetInt/{id}")]
+    public ActionResult<int?> GetInt(int? id)
+    {
+        return Ok(id);
+    }
+```
+
+>オブジェクトの生存期間を外部からコントロールする必要があるクラスを『状態を持つクラス』と言い、基本的に DI コンテナへ登録する対象には向いていません。  
+>
+>とは言っても『状態を持つクラス』を DI したい場合もあるため、状態を持たない Factory クラスをインジェクションして Factory からインスタンスを受け取るようにしています。  
+>[ようこそ Dapper 至上主義の DataAccess へ【#5 WPF MVVM L@bo】](https://elf-mission.net/programming/wpf/mvvm-labo/phase05/#DataAccess_Repository)  
+
+[superの呼び出し](https://bliki-ja.github.io/CallSuper/)  
+
+なぜ新しい技術を使っていきたいのか？  
+・市場価値のため  
+・他でやっていける力をつけるため  
+・学ぶことが楽しいから  
+でもこれは、今の職場で学ぶことが何もなくなったり、圧倒的な成果を出すことが出来た時に考えることであって、現職で毎日学ぶことがあって楽しいならまだ早いと思う。  
+[転職・退職する前に考えてほしいこと](https://qiita.com/hiro-hiro/items/5d4f89cd30cf3e87bd61)  
