・整理 ・接続テスト用プログラム作成

--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -2,14 +2,6 @@
 
 ---
 
-## RPXで○○様ってつけたい
-
-``` txt
-= DataField + "様"
-```
-
----
-
 ## 表の名称
 
 パターン表  
@@ -1062,7 +1054,7 @@ dotnet swagger cli
 
 嵌ったポイントとしては新しくWebサイトを追加するのではなく、アプリケーションの追加で頑張ってしまったため、うまく行かなかった。  
 プログラム側でガチャガチャやる必要はなく、完全にIIS側の設定で済む話だった。  
-デフォルトページにきたらリダイレクトも考えたが、そもそもアプリのurlに到達しての話なので、全然関係なかったな。  
+デフォルトページにきたらリダイレクトも考えたが、そもそもアプリのurlに到達しての話なので、全然関係なかった。  
 
 他参考サイト  
 [How To Set Default Swagger Welcome Page In Web Api](https://www.adoclib.com/blog/how-to-set-default-swagger-welcome-page-in-web-api.html)  
@@ -1122,10 +1114,11 @@ services.AddSwaggerGen(c =>
 コマンド  
 
 ``` txt
-dotnet publish -o Output -c Release --self-contained=true -r win-x64 -p:PublishSingleFile=true -p:PublishTrimmed=true  
+dotnet publish -o Output -c Release --self-contained=true -r win-x64 -p:PublishSingleFile=true -p:PublishTrimmed=true
 ```
 
 [単体で使えるexeファイルの生成](https://teratail.com/questions/217007)  
+[単一ファイルの配置と実行可能ファイル](https://learn.microsoft.com/ja-jp/dotnet/core/deploying/single-file/overview?tabs=cli)  
 
 ---
 
@@ -1261,6 +1254,39 @@ ConsoleAppSample.Migrations.20221129070420_Second.cs
 
 - 参考  
   - [How do I exclude files/folders from a .NET Core/Standard project?](https://stackoverflow.com/questions/43173811/how-do-i-exclude-files-folders-from-a-net-core-standard-project)  
+
+---
+
+## SQLServer Linuxでの接続
+
+Linux上のSQLServerにアクセスする場合は以下のようにアクセスすればよい。  
+`Server=localhost;Database=myDatabase;User id=myUserName;Password=myPassword;`  
+
+以下、Linux上で動作しているSQLServerにアクセスしようとして色々あったのでまとめる。  
+結果的にLinuxなのにWindows認証しようとしてエラーとなっていた。  
+
+■**connection string is not valid sql server**  
+
+こんな感じのWindow認証でログインしようとして発生した。  
+`"Server=.\\SQLEXPRESS; Database=<db_name>; Integrated Security=True"`  
+
+SQLServerでWindows認証が使えるはずないので当然と言えば当然。  
+Windows認証 = WindowではローカルのSQLServerにアクセス → Linux上の(ローカルの)SQLServerにアクセス  
+という理論でやったが、Localにアクセスなら素直に`localhost` or `127.0.0.1`だった。  
+
+>Linuxは名前付きパイプの概念が違う。  
+>また、統合セキュリティは、Active Directory / NTML Authorizationに関連しているため、Linuxでは動作しません（少なくとも未設定では、Kerberos認証はサポートされています）。  
+>そのため、通常の標準的なユーザー名認証の接続文字列を使用します。  
+>`Server=localhost;Database=myDatabase;User id=myUserName;Password=myPassword;`  
+[Invalid SQL Server Connection String on Linux Entity Framework Core](https://stackoverflow.com/questions/55454878/invalid-sql-server-connection-string-on-linux-entity-framework-core)  
+
+■**System.Data.SqlClient.SqlException: 'System.Net.Security.Native assembly:\<unknown assembly> type:\<unknown type> member:(null)**
+
+`System.Net.Security`とあるので、セキュリティに関することなのは分かった。  
+この時まだWindows認証で頑張っていたので、`Integrated Security`がセキュリティに関するオプションであることは明白だったので、消したらエラーも消えた。  
+リンク先の人も消したら出てこなくなったと言っている。  
+
+[System.Data.SqlClient.SqlException: 'System.Net.Security.Native assembly:\<unknown assembly> type:\<unknown type> member:(null)](https://learn.microsoft.com/en-us/answers/questions/979587/systemdatasqlclientsqlexception-39systemnetsecurit.html)  
 
 ---
 
