マイグレーション整理

--- a/SystemDesign/詳細設計書.md
+++ b/SystemDesign/詳細設計書.md
@@ -1,3 +1,5 @@
 # 詳細設計書
 
 [詳細設計書って何をどう書くの？](https://qiita.com/pickles1413/items/38d650fc29bb6a6c070d)
+
+[「詳細設計書という名のゴミ」が問題になっている](http://employed-person.blog.jp/archives/25595926.html)
