--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -23,13 +23,6 @@
 
 ---
 
-## asp.net パイプライン
-
-プロセス間通信
-x86Extension
-
----
-
 ## マニフェストファイル
 
 アプリケーション マニフェスト [application manifest]  
@@ -1055,8 +1048,85 @@ dotnet swagger cli
 嵌ったポイントとしては新しくWebサイトを追加するのではなく、アプリケーションの追加で頑張ってしまったため、うまく行かなかった。  
 プログラム側でガチャガチャやる必要はなく、完全にIIS側の設定で済む話だった。  
 デフォルトページにきたらリダイレクトも考えたが、そもそもアプリのurlに到達しての話なので、全然関係なかった。  
+→  
+いや、関係あったわ。  
 
-他参考サイト  
+■**手順**  
+
+- 開発環境  
+.Net6  
+VisualStudioCode
+IISインストール済み  
+
+1.**プロジェクト作成**  
+
+実行コマンド  
+`dotnet new webapi -n iis_webapi`  
+
+2.**Program.csを編集**  
+
+- `app.Environment.IsDevelopment()`の部分に条件文追加  
+- リダイレクト命令の追加  
+
+``` cs
+var builder = WebApplication.CreateBuilder(args);
+
+// Add services to the container.
+
+builder.Services.AddControllers();
+// Learn more about configuring Swagger/OpenAPI at https://aka.ms/aspnetcore/swashbuckle
+builder.Services.AddEndpointsApiExplorer();
+builder.Services.AddSwaggerGen();
+
+var app = builder.Build();
+
+// Configure the HTTP request pipeline.
+if (app.Environment.IsDevelopment() || app.Environment.IsProduction())
+{
+    app.UseSwagger();
+    app.UseSwaggerUI();
+}
+
+app.UseHttpsRedirection();
+
+app.UseAuthorization();
+
+app.MapControllers();
+
+app.MapGet("/", async context =>
+{
+    context.Response.Redirect("/swagger/index.html");
+    await context.Response.CompleteAsync();
+});
+
+app.Run();
+```
+
+3.**プロジェクト発行**  
+
+実行コマンド  
+`dotnet publish -c Release`  
+
+発行物を確認する。  
+`iis_webapi\bin\release\net6.0\publish`  
+
+4.**サイトの設定**  
+
+iisを開いて`サイト`を右クリック→`Webサイトの追加`  
+
+- サイト名 : `iis_webapi`  
+- ポート番号 : `8080`  
+  ※`8080`が使われている場合は他のポート番号を指定する
+- 物理パス : `C:\inetpub\wwwroot\iis_webapi`  
+  ※`iis_webapi`フォルダは作成する  
+
+`bin\release\net6.0\publish`の中身を`C:\inetpub\wwwroot\iis_webapi`に全てコピー  
+
+5.**サイトへアクセス**  
+
+iisの右側の操作タブ,`Webサイトの参照`から`*:8080(http)参照`をクリック or `http://localhost:8081/`にアクセス。  
+
+- 他参考サイト  
 [How To Set Default Swagger Welcome Page In Web Api](https://www.adoclib.com/blog/how-to-set-default-swagger-welcome-page-in-web-api.html)  
 [How to redirect root to swagger in Asp.Net Core 2.x?](https://stackoverflow.com/questions/49290683/how-to-redirect-root-to-swagger-in-asp-net-core-2-x)  
 [How to set Swagger as default start page?](https://stackoverflow.com/questions/47457681/how-to-set-swagger-as-default-start-page)  
@@ -1064,15 +1134,14 @@ dotnet swagger cli
 [How to host Asp.net core web API on IIS](https://www.youtube.com/watch?v=6HiaXCAlRr0)  
 [ASP.NET Core でリダイレクトする (301,302 リダイレクトの実装) (ASP.NET Core プログラミング)](https://www.ipentec.com/document/asp-net-core-implement-301-302-redirect)  
 
-検索文字列  
-
-- webapi iis swagger default  
-- .net core web api redirect swagger  
-- launchsettings.json iissettings applicationurl  
-- set swagger as default page iis  
-- asp.net core redirect to url .net6 program.cs  
-- iis default url  
-- .net core default url  
+- 検索文字列  
+webapi iis swagger default  
+.net core web api redirect swagger  
+launchsettings.json iissettings applicationurl  
+set swagger as default page iis  
+asp.net core redirect to url .net6 program.cs  
+iis default url  
+.net core default url  
 
 ---
 
@@ -1080,7 +1149,9 @@ dotnet swagger cli
 
 .Net6の場合  
 
-プロジェクト右クリック,プロパティ→ビルド→出力→ドキュメントファイル→APIドキュメントを含むファイルを生成にチェック
+プロジェクト右クリック,プロパティ→ビルド→出力→ドキュメントファイル→APIドキュメントを含むファイルを生成にチェック  
+
+Program.csに以下のコードを記述
 
 ``` cs : Program.cs
 services.AddSwaggerGen(c =>
@@ -1311,3 +1382,7 @@ Windows認証 = WindowではローカルのSQLServerにアクセス → Linux上
 ・学ぶことが楽しいから  
 でもこれは、今の職場で学ぶことが何もなくなったり、圧倒的な成果を出すことが出来た時に考えることであって、現職で毎日学ぶことがあって楽しいならまだ早いと思う。  
 [転職・退職する前に考えてほしいこと](https://qiita.com/hiro-hiro/items/5d4f89cd30cf3e87bd61)  
+
+- `asp.net` パイプライン  
+プロセス間通信  
+x86Extension  
