・viエディタ ・デザインパターン整理 ・UnitOfWork ・Repository ・整理

--- a/DataBase/チューニング.md
+++ b/DataBase/チューニング.md
@@ -2,6 +2,20 @@
 
 ---
 
+>- N+1問題の解決法  
+>   - Join  
+>   - EagerLoding  
+>    あらかじめ取得しておく方法  
+>- INSERTが遅い場合のDBチューニング方法  
+>   - BULK INSERT  
+>- 1本のSQLクエリが遅い場合のDBチューニングのやり方  
+>   - インデクス  
+>   - SQL実行計画の確認  
+>   - パーティション  
+>[【保存版】DBパフォーマンス・チューニング講座｜遅いデータベースを速くする方法とは](https://www.youtube.com/watch?v=UWSWKUMd71Q)  
+
+---
+
 [【保存版】クエリ パフォーマンスが著しく低下した場合の一時的な対処方法 (SQL Server/Azure SQL Database)](https://www.nobtak.com/entry/sqlp01)  
 [SQLが重いときに見るお気軽チューニング方法](https://zenn.dev/seyama/articles/81f54a4ddedf11)  
 [新人研修でマスターするDBのパフォーマンスチューニング](https://recruit.gmo.jp/engineer/jisedai/blog/mysql-index-training/)  
