--- a/License/LPIC/LPIC1/102/7.シェルとシェルスクリプト.md
+++ b/License/LPIC/LPIC1/102/7.シェルとシェルスクリプト.md
@@ -514,21 +514,21 @@ bashの組み込みコマンド。
 シェル変数とも言うらしい。  
 
 ``` txt
-$0    :: シェルスクリプトファイル名  
-$1    :: 1番目の引数。※ 2番目の引数の場合は $2 と指定する。  
-「$$」:: 現在のシェルのプロセス番号。文体がおかしくなるので、これだけかっこで囲ってます。
-$#    :: コマンドラインに与えられた引数の数  
-$?    :: シェルが最後に実行したコマンドの終了ステータス ( 0 = 正常終了、1 = 異常終了、それ以外はエラー ）  
-$@    :: 全ての引数 ( 区切りはスペース )  
-$*    :: 全ての引数 ( 区切りは環境変数IFSで指定したもの )  
+$0  :: シェルスクリプトファイル名  
+$1  :: 1番目の引数。※ 2番目の引数の場合は $2 と指定する。  
+$$  :: 現在のシェルのプロセス番号。      $$
+$#  :: コマンドラインに与えられた引数の数  
+$?  :: シェルが最後に実行したコマンドの終了ステータス(0 = 正常終了、1 = 異常終了、それ以外はエラー)  
+$@  :: 全ての引数 ( 区切りはスペース )  
+$*  :: 全ての引数 ( 区切りは環境変数IFSで指定したもの )  
 ```
 
 シェルスクリプトの実行後 `echo $?` と実行して 0 が帰ってくるならスクリプトが正常終了したことが分かる。  
 bashのプロンプトで`echo $$`を実行した場合のプロセスIDはシェル自身のプロセスIDが格納される。  
 
-10番目以降の引数を参照する時は${10}のように「{}」で囲う必要があります。  
-「{}」を使用しないとシェルは「$1 + "0"」のように誤った解釈をします。  
-そのため、$10および$11はそれぞれ「a0」と「a1」のように表示されます（aは1番目の引数）。  
+10番目以降の引数を参照する時は\${10}のように「{}」で囲う必要があります。  
+「{}」を使用しないとシェルは「\$1 + "0"」のように誤った解釈をします。  
+そのため、\$10および\$11はそれぞれ「a0」と「a1」のように表示されます（aは1番目の引数）。  
 
 ### if文
 
